--- a/views/index.erb
+++ b/views/index.erb
@@ -8,9 +8,10 @@
   </head>
     <% @articles.each_with_index do |article, i| %>
       <div class= "body_div">
-        <p class="body_text"><%=i+1%>. <img class="arrow" src="images/grayarrow.gif"><a class="body_link" href="https://<%= article[:url]%>"> <%=article[:title]%> </a>(<%=article[:url]%>)</p>
-        <p class="body_description"> <%=article[:description]%></p>
-        <p class="body_lower_data">63 points by <a class="body_lower_data" href="https://news.ycombinator.com/user?id=rnyman"> lyime</a> 56 minutes ago | <a class="body_lower_data" href="comments.html">17 comments</a></p>
+        <p class="body_text"><%=i+1%>. <img class="arrow" src="images/grayarrow.gif"><a class="body_link" href="https://<%= article["url"]%>"> <%=article["title"]%> </a>(<%=article["url"]%>)</p>
+        <p class="body_description"> <%=article["descriptions"]%></p>
+        <p class="body_lower_data">63 points by <a class="body_lower_data" href="https://news.ycombinator.com/user?id=rnyman"> lyime</a> 56 minutes ago |
+          <a class="body_lower_data" href="/articles/<%= article["id"] %>/comments">comments</a></p>
       </div>
 
     <%end%>
