--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
   </head>
 
   <body>
@@ -11,7 +11,7 @@
       <div id="navbar">
         <nav>
 
-            <img class="logo" src="images/y18.gif"></a>
+            <img class="logo" src="/images/y18.gif"></a>
           <ul class="navbar-links navbar-links-right inline-list">
             <li><a class = "navbar-links" href="https://news.ycombinator.com/newslogin?whence=%6e%65%77%73">login</a></li>
           </ul>
