--- a/views/comments.erb
+++ b/views/comments.erb
@@ -7,20 +7,19 @@
     <link rel="stylesheet" href="/styles.css">
   </head>
 
-    <% @articles.each do |article| %>
-      <div class= "body_div">
-        <p class="body_text"><img class="arrow" src="/images/grayarrow.gif"><a class="body_link" href="https://<%= article["url"]%>"> <%=article["title"]%> </a>(<%=article["url"]%>)</p>
-        <p class="body_description"> <%=article["descriptions"]%></p>
-        <p class="body_lower_data">63 points by <a class="body_lower_data" href="https://news.ycombinator.com/user?id=rnyman"> lyime</a> 56 minutes ago | <a class="body_lower_data" href="comments.html">17 comments</a></p>
-      </div>
+  <div class= "body_div">
+    <p class="body_text"><img class="arrow" src="/images/grayarrow.gif"><a class="body_link" href="https://<%= @article["url"]%>"> <%= @article["title"]%> </a>(<%=@article["url"]%>)</p>
+    <p class="body_description"> <%=@article["descriptions"]%></p>
+    <p class="body_lower_data">63 points by <a class="body_lower_data" href="https://news.ycombinator.com/user?id=rnyman"> lyime</a> 56 minutes ago | <a class="body_lower_data" href="comments.html">17 comments</a></p>
+  </div>
 
-    <%end%>
   <div style="margin-top: 30px; padding-left: 20px">
-    <form action="/articles/<%= @articles[0]["id"] %>/comments" method="post">
+    <form action="/articles/<%= @article["id"] %>/comments" method="post">
       <label for="username">Username: </label>
-      <input type="text" name="username" id="username" placeholder="Enter username"/><br>
+      <input type="text" name="username" id="username" placeholder="Enter username" value="<%= @comment[:username] %>" /><br>
       <label for="comment">Comment: </label><br>
-      <textarea type="textarea" name="comment" id ="comment" cols="50" rows="5"></textarea><br>
+      <textarea type="textarea" name="comment" id ="comment" cols="50" rows="5"><%= @comment[:description] %></textarea>
+      <br>
       <input type="submit" value="Submit Comment"/>
     </form>
   </div>
